<resources>
    <string name="app_name">ImoveisKt</string>
    <!-- A -->
    <string name="action_about">Sobre</string>
    <string name="action_settings">Settings</string>
    <string name="action_editar">Editar</string>
    <string name="action_salvar">Salvar</string>
    <string name="action_deletar">Deletar</string>
    <string name="about_dialog_text">
<![CDATA[
<b>Aplicativo Leilão Imoveis</b><br>
Versao %s<br><br>
<a href="http://www.portal.ifrn.edu.br">http://portal.ifrn.edu.br</a><br><br>
	]]>
	</string>

    <string name="about_dialog_title">Ifrn Android</string>
    <!-- A -->
    <string name="apartamento">Apartamento</string>

    <!-- B -->
    <string name="bairro">Bairro</string>

    <!-- C -->
    <string name="imoveis">Imoveis</string>
    <string name="configuracoes">Configurações</string>
    <string name="casa">Casa</string>
    <string name="cidade">Cidade</string>

    <!-- D -->
    <string name="descricao">Descrição</string>
    <string name="desconto">Desconto</string>

    <!-- E -->
    <string name="endereco">Endereço</string>
    <string name="estado">Estado</string>

    <!-- F -->
    <string name="favoritos">Favoritos</string>

    <!-- T -->
    <string name="terreno">Terreno</string>

    <!-- L -->
    <string name="link">Link</string>

    <!-- M -->
    <string name="msg_sem_internet">Sem internet.</string>
    <string name="msg_aguarde">Por favor aguarde…</string>
    <string name="msg_imovel_favoritado">Imovel adicionado aos favoritado.</string>
    <string name="msg_imovel_desfavoritado">Imovel removido do favoritados.</string>
    <string name="msg_imovel_salvo">Imovel salvo com sucesso</string>
    <string name="msg_imovel_deletado">Imovel excluído com sucesso</string>
    <string name="msg_confirma_excluir_imovel">Confirma excluir este imovel?</string>
    <string name="msg_imovel_excluido">Imovel excluído com sucesso</string>
    <string name="msg_error_form_nome">Nome é obrigatório</string>
    <string name="msg_error_form_desc">Descrição é obrigatório</string>
    <string name="modalidadeVenda">Modalidade da Venda</string>

    <!-- N -->
    <string name="nao">Não</string>
    <string name="nav_drawer_username">Dispositivos Moveis</string>
    <string name="nav_drawer_email">ifrn@ifrn.edu.br</string>
    <string name="nome">Nome</string>
    <string name="novo_imovel">Novo Imovel</string>

    <!-- O -->
    <string name="ok">OK</string>

    <!-- P -->
    <string name="preco">Preço</string>

    <!-- S -->
    <string name="site_da_caixa">Site da Caixa</string>
    <string name="sim">Sim</string>
    <string name="sobre">Sobre</string>

    <!-- V -->
    <string name="vazio" />
    <string name="valorAvaliacao">Valor da Avaliação</string>


    <!-- T -->
    <string name="tipo">Tipo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>